apps/services/gitea/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: services
  labels:
    app: gitea
spec:
  selector:
    matchLabels:
      app: gitea
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - name: gitea
        image: gitea/gitea:1.14.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: gitea-http
        - containerPort: 22
          name: gitea-ssh
        volumeMounts:
        - name: gitea-data
          mountPath: /data
      volumes:
      - name: gitea-data
        persistentVolumeClaim:
          claimName: nfs-pvc-gitea
