apps/services/gitea/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: services
  labels:
    app: gitea
spec:
  ports:
    - name: gitea-http
      port: 3000
      targetPort: 3000
    - name: gitea-ssh
      port: 3022
      targetPort: 22
  selector:
    app: gitea
