apps/services/gitea/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gitea
  namespace: services
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
  labels:
    app: gitea
spec:
  rules:
  - host: gitea.technolab.duckdns.org
    http:
      paths:
      - path: /
        backend:
          serviceName: gitea
          servicePort: 3000
  tls:
  - hosts:
    - gitea.technolab.duckdns.org
    secretName: services-technolab-duckdns-org-tls
